--- a/templates/device/list.html.twig
+++ b/templates/device/list.html.twig
@@ -3,8 +3,22 @@
     {% include "nav/nav.twig" %}
     <div class="container-fluid">
         <div>
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-
+            <form method="GET" class="form-inline my-2 my-lg-0">
+                <input
+                    class="form-control mr-sm-2"
+                    type="search"
+                    placeholder="Search"
+                    aria-label="Search"
+                    name="keyWord"
+                    value="{{ keyWord }}"
+                >
+                <button
+                    class="btn btn-outline-success my-2 my-sm-0"
+                    type="submit"
+                >
+                    Search
+                </button>
+            </form>
             <a
                 class="btn btn-primary"
                 href="{{ path('new_device') }}"
