--- a/templates/part/list.html.twig
+++ b/templates/part/list.html.twig
@@ -3,17 +3,28 @@
     {% include "nav/nav.twig" %}
     <div class="container-fluid">
         <div>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                <a
-                    class="btn btn-primary"
-                    href="{{ path('new_part') }}"
+            <form method="GET" class="form-inline my-2 my-lg-0">
+                <input
+                    class="form-control mr-sm-2"
+                    type="search"
+                    placeholder="Search"
+                    aria-label="Search"
+                    name="keyWord"
+                    value="{{ keyWord }}"
                 >
-                    New Part
-                </a>
+                <button
+                    class="btn btn-outline-success my-2 my-sm-0"
+                    type="submit"
+                >
+                    Search
+                </button>
             </form>
-
+            <a
+                class="btn btn-primary"
+                href="{{ path('new_part') }}"
+            >
+                New Part
+            </a>
         </div>
         <table class="table">
             <thead>
