--- a/templates/nav/nav.twig
+++ b/templates/nav/nav.twig
@@ -5,14 +5,17 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-            <li class="nav-item active">
+            <li class="nav-item {% if navbar == 'task' %} active {% endif %}">
                 <a class="nav-link" href="/tasks">Task</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item {% if navbar == 'device' %} active {% endif %}">
                 <a class="nav-link" href="/devices">Device</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/parts">Parts</a>
+            <li class="nav-item {% if navbar == 'parts' %} active {% endif %}">
+                <a class="nav-link" href="/parts">Part</a>
+            </li>
+            <li class="nav-item {% if navbar == 'location' %} active {% endif %}">
+                <a class="nav-link" href="/locations">Location</a>
             </li>
         </ul>
     </div>
