--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,13 @@
 body {
     background-color: lightgray;
 }
+
+.footer {
+    margin-bottom: 50px;
+}
+
+@media (min-width: 768px) {
+    .search-bar {
+        width: 50% !important;
+    }
+}
