--- a/templates/device/list.html.twig
+++ b/templates/device/list.html.twig
@@ -3,36 +3,44 @@
     {% include "nav/nav.twig" %}
     <div class="container-fluid">
         <div>
-            <form method="GET" class="form-inline my-2 my-lg-0">
-                <input
-                    class="form-control mr-sm-2"
-                    type="search"
-                    placeholder="Search"
-                    aria-label="Search"
-                    name="keyWord"
-                    value="{{ keyWord }}"
-                >
-                <button
-                    class="btn btn-outline-success my-2 my-sm-0"
-                    type="submit"
-                >
-                    Search
-                </button>
+            <div>
+            <form method="GET" class="form-inline my-2 my-lg-0 d-block search-bar">
+                <div class="input-group mb-3 ">
+                    <input
+                        type="search"
+                        class="form-control"
+                        placeholder="Key Word"
+                        aria-label="Key Word"
+                        name="keyWord"
+                        value="{{ keyWord }}"
+                    >
+                    <div class="input-group-append">
+                        <button
+                            class="btn btn-outline-secondary"
+                            type="submit"
+                        >
+                            Search
+                        </button>
+                    </div>
+                </div>
             </form>
-            <a
-                class="btn btn-primary float-md-right float-sm-left"
-                href="{{ path('new_device') }}"
-            >
-                New Device
-            </a>
-            <button
-                type="button"
-                class="btn btn-primary float-md-right float-sm-left"
-                data-toggle="modal"
-                data-target="#exampleModalCenter"
-            >
-                Upload Excel
-            </button>
+            </div>
+            <div>
+                <a
+                    class="btn btn-primary float-md-right float-sm-left"
+                    href="{{ path('new_device') }}"
+                >
+                    New Device
+                </a>
+                <button
+                    type="button"
+                    class="btn btn-primary float-md-right float-sm-left"
+                    data-toggle="modal"
+                    data-target="#exampleModalCenter"
+                >
+                    Upload Excel
+                </button>
+            </div>
         </div>
 
         <div
@@ -88,9 +96,11 @@
                         <th>SN</th>
                         <th>Barcode</th>
                         <th>Rack</th>
+                        <th>Unit</th>
                         <th>Band</th>
                         <th>Model</th>
                         <th>PO</th>
+                        <th>Status</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -109,9 +119,11 @@
                         <td> {{ item.getSerialNumber() }} </td>
                         <td> {{ item.getBarcodeNumber() }} </td>
                         <td> {{ item.getRack() }}</td>
+                        <td> {{ item.getUnit() }}</td>
                         <td> {{ item.getModel().getManufacturer() }} </td>
                         <td> {{ item.getModel().getModel() }} </td>
                         <td> {{ item.getPo() }} </td>
+                        <td> {{ item.getStatus() }} </td>
                     </tr>
                     {% endfor %}
                 </tbody>
