--- a/templates/device/new.html.twig
+++ b/templates/device/new.html.twig
@@ -50,7 +50,25 @@
                 {{ form_errors(form.rack) }}
                 {{ form_widget(form.rack, {'attr': {class: 'form-control'} }) }}
             </div>
-            {{ form_widget(form.save, {'attr':{class:'btn btn-primary'}}) }}
+            <div class="form-group">
+                {{ form_label(form.unit) }}
+                {{ form_errors(form.unit) }}
+                {{ form_widget(form.unit, {'attr': {class: 'form-control'} }) }}
+            </div>
+            <div class="form-group">
+                {{ form_label(form.status) }}
+                {{ form_errors(form.status) }}
+                {{ form_widget(form.status, {'attr': {class: 'form-control'} }) }}
+            </div>
+
+            <a
+                class="btn btn-warning"
+                href="{{ path('devices') }}"
+            >
+                Cancel
+            </a>
+
+            {{ form_widget(form.save, {'attr':{class:'btn btn-primary float-right'}}) }}
         {{ form_end(form) }}
     </div>
 {% endblock %}
