--- a/templates/device/list.html.twig
+++ b/templates/device/list.html.twig
@@ -2,30 +2,38 @@
 {% block body %}
     {% include "nav/nav.twig" %}
     <div class="container-fluid">
-        <div>
-            <div>
-            <form method="GET" class="form-inline my-2 my-lg-0 d-block search-bar">
-                <div class="input-group mb-3 ">
-                    <input
-                        type="search"
-                        class="form-control"
-                        placeholder="Key Word"
-                        aria-label="Key Word"
-                        name="keyWord"
-                        value="{{ keyWord }}"
-                    >
-                    <div class="input-group-append">
-                        <button
-                            class="btn btn-outline-secondary"
-                            type="submit"
+        <div class="row">
+            <div class="col-sm">
+                <form method="GET" class="form-inline my-2 my-lg-0 d-block search-bar">
+                    <div class="input-group mb-3 ">
+                        <input
+                            type="search"
+                            class="form-control"
+                            placeholder="Key Word"
+                            aria-label="Key Word"
+                            name="keyWord"
+                            value="{{ keyWord }}"
                         >
-                            Search
-                        </button>
+                        <div class="input-group-append">
+                            <button
+                                class="btn btn-outline-secondary"
+                                type="submit"
+                            >
+                                Search
+                            </button>
+                        </div>
+                        <div class="input-group-append">
+                            <a
+                                class="btn btn-outline-secondary"
+                                href="{{ path('devices') }}"
+                            >
+                                Clear
+                            </a>
+                        </div>
                     </div>
-                </div>
-            </form>
+                </form>
             </div>
-            <div>
+            <div class="col-sm mb-3">
                 <a
                     class="btn btn-primary float-md-right float-sm-left"
                     href="{{ path('new_device') }}"
@@ -42,7 +50,6 @@
                 </button>
             </div>
         </div>
-
         <div
             class="modal fade"
             id="exampleModalCenter"
