--- a/templates/part/list.html.twig
+++ b/templates/part/list.html.twig
@@ -2,29 +2,45 @@
 {% block body %}
     {% include "nav/nav.twig" %}
     <div class="container-fluid">
-        <div>
-            <form method="GET" class="form-inline my-2 my-lg-0">
-                <input
-                    class="form-control mr-sm-2"
-                    type="search"
-                    placeholder="Search"
-                    aria-label="Search"
-                    name="keyWord"
-                    value="{{ keyWord }}"
+        <div class="row">
+            <div class="col-sm">
+                <form method="GET" class="form-inline my-2 my-lg-0 d-block search-bar">
+                    <div class="input-group mb-3 ">
+                        <input
+                            type="search"
+                            class="form-control"
+                            placeholder="Key Word"
+                            aria-label="Key Word"
+                            name="keyWord"
+                            value="{{ keyWord }}"
+                        >
+                        <div class="input-group-append">
+                            <button
+                                class="btn btn-outline-secondary"
+                                type="submit"
+                            >
+                                Search
+                            </button>
+                        </div>
+                        <div class="input-group-append">
+                            <a
+                                class="btn btn-outline-secondary"
+                                href="{{ path('parts') }}"
+                            >
+                                Clear
+                            </a>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="col-sm mb-3">
+                <a
+                    class="btn btn-primary float-md-right float-sm-left"
+                    href="{{ path('new_part') }}"
                 >
-                <button
-                    class="btn btn-outline-success my-2 my-sm-0"
-                    type="submit"
-                >
-                    Search
-                </button>
-            </form>
-            <a
-                class="btn btn-primary"
-                href="{{ path('new_part') }}"
-            >
-                New Part
-            </a>
+                    New Part
+                </a>
+            </div>
         </div>
         <div class="table-responsive-md">
             <table class="table">
