--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -8,8 +8,12 @@
     margin-bottom: 50px;
 }
 
+.navbar {
+    margin-bottom: 10px;
+}
+
 @media (min-width: 768px) {
     .search-bar {
-        width: 50% !important;
+        width: 50%;
     }
 }
