--- a/templates/nav/nav.twig
+++ b/templates/nav/nav.twig
@@ -5,6 +5,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
+            <li class="nav-item {% if navbar == 'home' or navbar == '' %} active {% endif %}">
+                <a class="nav-link" href="/index">Home</a>
+            </li>
             <li class="nav-item {% if navbar == 'task' %} active {% endif %}">
                 <a class="nav-link" href="/tasks">Task</a>
             </li>
