--- a/templates/nav/nav.twig
+++ b/templates/nav/nav.twig
@@ -18,7 +18,7 @@
                 <a class="nav-link" href="/devices">Device</a>
             </li>
             <li class="nav-item {% if navbar == 'parts' %} active {% endif %}">
-                <a class="nav-link" href="/parts">Part</a>
+                <a class="nav-link" href="/parts">Spare</a>
             </li>
             <li class="nav-item {% if navbar == 'location' %} active {% endif %}">
                 <a class="nav-link" href="/locations">Location</a>
