add repository trait

--- a/templates/nav/nav.twig
+++ b/templates/nav/nav.twig
@@ -23,6 +23,14 @@
             <li class="nav-item {% if navbar == 'location' %} active {% endif %}">
                 <a class="nav-link" href="/locations">Location</a>
             </li>
+
+            <li class="nav-item {% if navbar == 'models' %} active {% endif %}">
+                <a class="nav-link" href="/models">Model</a>
+            </li>
+
+            <li class="nav-item {% if navbar == 'manufacturer' %} active {% endif %}">
+                <a class="nav-link" href="/manufacturers">Manufacturer</a>
+            </li>
         </ul>
     </div>
 </nav>
