upload model excel

--- a/templates/device/list.html.twig
+++ b/templates/device/list.html.twig
@@ -44,7 +44,7 @@
                     type="button"
                     class="btn btn-primary float-md-right float-sm-left"
                     data-toggle="modal"
-                    data-target="#exampleModalCenter"
+                    data-target="#uploadModal"
                 >
                     Upload Excel
                 </button>
@@ -52,10 +52,10 @@
         </div>
         <div
             class="modal fade"
-            id="exampleModalCenter"
+            id="uploadModal"
             tabindex="-1"
             role="dialog"
-            aria-labelledby="exampleModalCenterTitle"
+            aria-labelledby="uploadModalTitle"
             aria-hidden="true"
         >
             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -64,7 +64,7 @@
                     <div class="modal-header">
                         <h5
                             class="modal-title"
-                            id="exampleModalCenterTitle"
+                            id="uploadModalTitle"
                         >
                             Upload Excel
                         </h5>
