--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -15,3 +15,12 @@ body {
         width: 50%;
     }
 }
+
+.bar {
+    height: 18px;
+    background: green;
+}
+
+.upload_result {
+    width: 100%;
+}
